chore: splash__caption updated and fixed contact element added.

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -11,6 +11,9 @@
 - id: bookNow
   translation: "Book Now"
 
+- id: callUs
+  translation: "Call +381 66 504 0583"
+
 - id: getQuote
   translation: "Get a Quote"
 
